# pandas-ta

./: .gitignore  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  indicator-request.md
.github/workflows/: test.yml
docs/: conf.py  index.rst
examples/: Polars_TI_Study_Examples.ipynb  Speed_Test.ipynb  TA_with_Polar_TI.ipynb  VectorBT_Backtest_with_Polars_TI.ipynb  example.ipynb  ni.py  simple_study.json  watchlist.py
polars_ti/: __init__.py  _typing.py  core.py  custom.py  ma.py  maps.py
polars_ti/candles/: __init__.py  cdl_doji.py  cdl_inside.py  cdl_pattern.py  cdl_z.py  ha.py
polars_ti/cycles/: __init__.py  ebsw.py  reflex.py
polars_ti/momentum/: __init__.py  ao.py  apo.py  bias.py  bop.py  brar.py  cci.py  cfo.py  cg.py  cmo.py  coppock.py  crsi.py  cti.py  dm.py  er.py  eri.py  exhc.py  fisher.py  inertia.py  kdj.py  kst.py  macd.py  mom.py  pgo.py  ppo.py  psl.py  qqe.py  roc.py  rsi.py  rsx.py  rvgi.py  slope.py  smc.py  smi.py  squeeze.py  squeeze_pro.py  stc.py  stoch.py  stochf.py  stochrsi.py  (+5 more)
polars_ti/overlap/: __init__.py  alligator.py  alma.py  dema.py  ema.py  fwma.py  hilo.py  hl2.py  hlc3.py  hma.py  hwma.py  ichimoku.py  jma.py  kama.py  linreg.py  mama.py  mcgd.py  midpoint.py  midprice.py  ohlc4.py  pivots.py  pwma.py  rma.py  sinwma.py  sma.py  smma.py  ssf.py  ssf3.py  supertrend.py  swma.py  t3.py  tema.py  trima.py  vidya.py  wcp.py  wma.py  zlma.py
polars_ti/performance/: __init__.py  drawdown.py  log_return.py  percent_return.py
polars_ti/statistics/: __init__.py  (+10 more)
tests/: config.py  conftest.py  test_indicator_candle.py  test_indicator_cycles.py  test_indicator_momentum.py  test_indicator_overlap.py  test_indicator_performance.py  test_indicator_statistics.py  test_indicator_transform.py  test_indicator_trend.py  test_indicator_volatility.py  test_indicator_volume.py  test_metrics.py  test_numba.py  test_studies.py  test_utils.py
(+77 files in other folders)
